# Data-Structure-Project

./: .gitignore  CMakeLists.txt  README.md  input.txt  largeintcalculator.c  output.txt
.github/workflows/: build.yml  cmake.yml  compile.sh  macos.yml
builds/Linux/: CMakeCache.txt  Makefile  cmake_install.cmake  largeintcalculator
builds/Linux/builds/Linux/Release/: largeintcalculator
builds/Windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  largeintcalculator.sln  largeintcalculator.vcxproj  largeintcalculator.vcxproj.filters
builds/Windows/largeintcalculator.dir/Release/: largeintcalculator.exe.recipe
builds/Windows/largeintcalculator.dir/Release/largeint.495CA707.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
builds/Windows/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
builds/Windows/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
builds/Windows/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
builds/Windows/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
builds/macOS/: CMakeCache.txt  Makefile
builds/macOS/builds/macOS/Release/: largeintcalculator
builds/macos/: CMakeCache.txt  cmake_install.cmake
builds/ubuntu/: largeintcalculator
